--- a/Assets/style.css
+++ b/Assets/style.css
@@ -21,7 +21,7 @@ body {
   
   h2 {
     margin: 2% 0;
-    font-size: 150%;
+    font-size: 200%;
   }
   
   nav {
@@ -38,13 +38,13 @@ body {
     text-decoration: none;
     text-align: center;
     justify-content: right;
-    justify-content: fle;
+    justify-content: flex-end;
   
   }
   main {
     display: flex;
     flex: 1 1 0;
-    max-width: 1200px;
+    max-width: 1000px;
     margin: 2% auto;
     flex-wrap: wrap;
   }
@@ -52,10 +52,9 @@ body {
   .contact-info{
     display: flex;
     width: 100%;
-    max-width: 1200px;
+    max-width: 1000px;
     align-items: center;
     justify-content: center;
-    padding: 0 20px;
   }
 
  .card-icon{
@@ -64,7 +63,6 @@ body {
   width: 60px;
   height: 60px;
   text-align: center;
-  border-radius: 50%;
  }
 
 
@@ -118,6 +116,15 @@ body {
     transform: rotate(8deg);
   
   }
+.content{
+    border-style: solid;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    background-color: #d8a47f;
+}
 
 
 .card header {
@@ -191,6 +198,7 @@ body {
     @media screen and (max-width: 992px) {
       .card {
         width: 50%;
+        height: 50%;
       }
     }
     @media screen and (max-width: 768px) {
@@ -198,12 +206,11 @@ body {
       nav,
       .product {
         flex-direction: column;
-      }
-
-      .card {
-        display: none;
         align-items: center;
       }
 
-  
+      .card {
+        align-items: center;
+        flex-direction: column;
+      }
     }
